Fix link to PanlasangPinoy in Home
The url to PanlasangPinoy didn't include the scheme
so the link is broken when viewed from GitHub Pages

It also didn't open in a new tab

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="recipes/sinigang_na_baboy_with_gabi.html">Sinigang na Baboy with Gabi</a></li>
     </ul>
 
-    All recipes are from <a href="panlasangpinoy.com">PanlasangPinoy</a>
+    All recipes are from <a href="https://panlasangpinoy.com/" target="_blank" rel="noopener noreferrer">PanlasangPinoy</a>
 
 </body>
 </html>
