--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
@@ -16,7 +17,7 @@
         <li><a href="recipes/sinigang_na_baboy_with_gabi.html">Sinigang na Baboy with Gabi</a></li>
     </ul>
 
-    All recipes are from <a href="https://panlasangpinoy.com/" target="_blank" rel="noopener noreferrer">PanlasangPinoy</a>
+    <p>All recipes are from <a href="https://panlasangpinoy.com/" target="_blank" rel="noopener noreferrer">PanlasangPinoy</a></p>
 
 </body>
 </html>
