--- a/recipes/pinoy_chicken_curry.html
+++ b/recipes/pinoy_chicken_curry.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pinoy Style Chicken Curry</title>
+    <link rel="stylesheet" href="style_recipes.css">
 </head>
 <body>
     <h1>Pinoy Style Chicken Curry</h1>
