--- a/recipes/super_crispy_lechon_kawali.html
+++ b/recipes/super_crispy_lechon_kawali.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Crispy Lechon Kawali</title>
+    <link rel="stylesheet" href="style_recipes.css">
 </head>
 <body>
     <h1>Super Crispy Lechon Kawali</h1>
