Center content in indext.html

--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="introduction">
+        <h1>Odin Recipes</h1>
 
-    <ul>
-        <li><a href="recipes/crispy_fried_chicken.html">Crispy Fried Chicken</a></li>
-        <li><a href="recipes/pinoy_chicken_curry.html">Pinoy Style Chicken Curry</a></li>
-        <li><a href="recipes/super_crispy_lechon_kawali.html">Super Crispy Lechon Kawali</a></li>
-        <li><a href="recipes/pinoy_scrambled_eggs.html">Pinoy Scrambled Eggs</a></li>
-        <li><a href="recipes/sinigang_na_baboy_with_gabi.html">Sinigang na Baboy with Gabi</a></li>
-    </ul>
+        <ul>
+            <li><a href="recipes/crispy_fried_chicken.html">Crispy Fried Chicken</a></li>
+            <li><a href="recipes/pinoy_chicken_curry.html">Pinoy Style Chicken Curry</a></li>
+            <li><a href="recipes/super_crispy_lechon_kawali.html">Super Crispy Lechon Kawali</a></li>
+            <li><a href="recipes/pinoy_scrambled_eggs.html">Pinoy Scrambled Eggs</a></li>
+            <li><a href="recipes/sinigang_na_baboy_with_gabi.html">Sinigang na Baboy with Gabi</a></li>
+        </ul>
 
-    <p>All recipes are from <a href="https://panlasangpinoy.com/" target="_blank" rel="noopener noreferrer">PanlasangPinoy</a></p>
-
+        <p>All recipes are from <a href="https://panlasangpinoy.com/" target="_blank" rel="noopener noreferrer">PanlasangPinoy</a></p>
+    </div>
 </body>
 </html>
